Fix margin for project descriptions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,6 +189,10 @@ p {
   margin: 0 0 2em 0;
 }
 
+.features p {
+  margin: 0 0 1em 0;
+}
+
 p.content {
   -moz-columns: 20em 2;
   -webkit-columns: 20em 2;
